--- a/views/principal/index.handlebars
+++ b/views/principal/index.handlebars
@@ -82,6 +82,9 @@
                 <li class="nav-item">
                     <a class="nav-link text-white" href="#local">Local</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="/admin">Login</a>
+                </li>
             </ul>
         </div>
     </div>
