Primeira versão completa

--- a/views/aluno/confirmar.handlebars
+++ b/views/aluno/confirmar.handlebars
@@ -105,17 +105,17 @@
                 </div>
             </div>
 
-            <div class="row mt-4">
-                <div class="col-sm-3">
-                    <label for="convidados">QUANTOS CONVIDADOS?</label>
-                    <select name="convidados" id="convidados" class="form-select" disabled required>
-                        <option value=""></option>
-                        <option value="0">0</option>
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                    </select>
-                </div>
-            </div>
+<!--            <div class="row mt-4">-->
+<!--                <div class="col-sm-3">-->
+<!--                    <label for="convidados">QUANTOS CONVIDADOS?</label>-->
+<!--                    <select name="convidados" id="convidados" class="form-select" disabled required>-->
+<!--                        <option value=""></option>-->
+<!--                        <option value="0">0</option>-->
+<!--                        <option value="1">1</option>-->
+<!--                        <option value="2">2</option>-->
+<!--                    </select>-->
+<!--                </div>-->
+<!--            </div>-->
 
         </fieldset>
         <div class="d-flex justify-content-end">
@@ -147,7 +147,7 @@
                     document.getElementById('nome').readOnly = true
 
                     document.getElementById('email').disabled = false
-                    document.getElementById('convidados').disabled = false
+                    //document.getElementById('convidados').disabled = false
                     document.getElementById('botao').disabled = false
                 }
             }else{
