--- a/views/admin/index.handlebars
+++ b/views/admin/index.handlebars
@@ -9,6 +9,9 @@
         <li class="nav-item">
           <a class="nav-link text-white" aria-current="page" href="/admin">Início</a>
         </li>
+          <li>
+              <a class="nav-link text-white" aria-current="page" href="/usuario/logout">Sair</a>
+          </li>
       </ul>
     </div>
   </div>
