--- a/views/principal/index.handlebars
+++ b/views/principal/index.handlebars
@@ -153,85 +153,51 @@
             <div class="col-md-4">
                 <div class="card activity-card h-100 border-0 shadow-sm">
                     <div class="card-body text-center p-4">
-                        <div class="rounded-circle bg-success bg-opacity-10 p-3 d-inline-flex mb-3">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="#0d6efd" viewBox="0 0 16 16">
-                                <path d="M8 5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3zm4 3a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3zM5.5 7a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm.5 6a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z"/>
-                                <path d="M16 8c0 3.15-1.866 2.585-3.567 2.07C11.42 9.763 10.465 9.473 10 10c-.603.683-.475 1.819-.351 2.92C9.826 14.495 9.996 16 8 16a8 8 0 1 1 8-8zm-8 7c.611 0 .654-.171.655-.176.078-.146.124-.464.07-1.119-.014-.168-.037-.37-.061-.591-.052-.464-.112-1.005-.118-1.462-.01-.707.083-1.61.704-2.314.369-.417.845-.578 1.272-.618.404-.038.812.026 1.16.104.343.077.702.186 1.025.284l.028.008c.346.105.658.199.953.266.653.148.904.083.991.024C14.717 9.38 15 9.161 15 8a7 7 0 1 0-7 7z"/>
-                            </svg>
-                        </div>
-                        <h4 class="card-title">Torneio de Futebol</h4>
-                        <p class="card-text">Competição entre turmas com premiação para os vencedores.</p>
+                        <img src="img/arco.png" alt="" class="w-75">
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="card activity-card h-100 border-0 shadow-sm">
                     <div class="card-body text-center p-4">
-                        <div class="rounded-circle bg-success bg-opacity-10 p-3 d-inline-flex mb-3">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="#0d6efd" viewBox="0 0 16 16">
-                                <path d="M12.5 3a.5.5 0 0 1 0 1h-5a.5.5 0 0 1 0-1h5zm0 3a.5.5 0 0 1 0 1h-5a.5.5 0 0 1 0-1h5zm.5 3.5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h5a.5.5 0 0 0 .5-.5zm-.5 2.5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1 0-1h5z"/>
-                                <path d="M16 2a2 2 0 0 0-2-2H2a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2zM4 1v14H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h2zm1 0h9a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H5V1z"/>
-                            </svg>
-                        </div>
-                        <h4 class="card-title">Oficinas de Dança</h4>
-                        <p class="card-text">Aprenda diferentes estilos de dança com professores especializados.</p>
+                        <img src="img/boi.png" alt="" class="w-75">
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="card activity-card h-100 border-0 shadow-sm">
                     <div class="card-body text-center p-4">
-                        <div class="rounded-circle bg-success bg-opacity-10 p-3 d-inline-flex mb-3">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="#0d6efd" viewBox="0 0 16 16">
-                                <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-                                <path d="M10.97 4.97a.235.235 0 0 0-.02.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-1.071-1.05z"/>
-                            </svg>
-                        </div>
-                        <h4 class="card-title">Palestras sobre Saúde</h4>
-                        <p class="card-text">Especialistas falarão sobre nutrição, bem-estar e vida saudável.</p>
+                        <img src="img/explode.png" alt="" class="w-75">
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="card activity-card h-100 border-0 shadow-sm">
                     <div class="card-body text-center p-4">
-                        <div class="rounded-circle bg-success bg-opacity-10 p-3 d-inline-flex mb-3">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="#0d6efd" viewBox="0 0 16 16">
-                                <path d="M8 3.5a.5.5 0 0 0-1 0V9a.5.5 0 0 0 .252.434l3.5 2a.5.5 0 0 0 .496-.868L8 8.71V3.5z"/>
-                                <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm7-8A7 7 0 1 1 1 8a7 7 0 0 1 14 0z"/>
-                            </svg>
-                        </div>
-                        <h4 class="card-title">Corrida de Revezamento</h4>
-                        <p class="card-text">Competição em equipes para todas as idades e níveis de habilidade.</p>
+                        <img src="img/1.png" alt="" class="w-75">
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="card activity-card h-100 border-0 shadow-sm">
                     <div class="card-body text-center p-4">
-                        <div class="rounded-circle bg-success bg-opacity-10 p-3 d-inline-flex mb-3">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="#0d6efd" viewBox="0 0 16 16">
-                                <path d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0zm3.5 7.5a.5.5 0 0 1 0 1H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5z"/>
-                            </svg>
-                        </div>
-                        <h4 class="card-title">Vôlei de Praia</h4>
-                        <p class="card-text">Torneio de vôlei em quadra de areia especialmente montada para o evento.</p>
+                        <img src="img/2.png" alt="" class="w-75">
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
-                <div class="card activity-card h-100 border-0 shadow-sm">
-                    <div class="card-body text-center p-4">
-                        <div class="rounded-circle bg-success bg-opacity-10 p-3 d-inline-flex mb-3">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="#0d6efd" viewBox="0 0 16 16">
-                                <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zM7 6.5C7 7.328 6.552 8 6 8s-1-.672-1-1.5S5.448 5 6 5s1 .672 1 1.5zM4.285 9.567a.5.5 0 0 1 .683.183A3.498 3.498 0 0 0 8 11.5a3.498 3.498 0 0 0 3.032-1.75.5.5 0 1 1 .866.5A4.498 4.498 0 0 1 8 12.5a4.498 4.498 0 0 1-3.898-2.25.5.5 0 0 1 .183-.683zM10 8c-.552 0-1-.672-1-1.5S9.448 5 10 5s1 .672 1 1.5S10.552 8 10 8z"/>
-                            </svg>
-                        </div>
-                        <h4 class="card-title">Gincanas Recreativas</h4>
-                        <p class="card-text">Atividades lúdicas e divertidas para integração de todos os participantes.</p>
-                    </div>
-                </div>
-            </div>
+<!--            <div class="col-md-4">-->
+<!--                <div class="card activity-card h-100 border-0 shadow-sm">-->
+<!--                    <div class="card-body text-center p-4">-->
+<!--                        <div class="rounded-circle bg-success bg-opacity-10 p-3 d-inline-flex mb-3">-->
+<!--                            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="#0d6efd" viewBox="0 0 16 16">-->
+<!--                                <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zM7 6.5C7 7.328 6.552 8 6 8s-1-.672-1-1.5S5.448 5 6 5s1 .672 1 1.5zM4.285 9.567a.5.5 0 0 1 .683.183A3.498 3.498 0 0 0 8 11.5a3.498 3.498 0 0 0 3.032-1.75.5.5 0 1 1 .866.5A4.498 4.498 0 0 1 8 12.5a4.498 4.498 0 0 1-3.898-2.25.5.5 0 0 1 .183-.683zM10 8c-.552 0-1-.672-1-1.5S9.448 5 10 5s1 .672 1 1.5S10.552 8 10 8z"/>-->
+<!--                            </svg>-->
+<!--                        </div>-->
+<!--                        <h4 class="card-title">Gincanas Recreativas</h4>-->
+<!--                        <p class="card-text">Atividades lúdicas e divertidas para integração de todos os participantes.</p>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
         </div>
     </div>
 </section>
