Impressão de todos os ingressos

--- a/views/admin/index.handlebars
+++ b/views/admin/index.handlebars
@@ -17,16 +17,51 @@
   </div>
 </nav>
 <h3 class="text-center">Cursos</h3>
+
+
 <div class="col-md-5 mx-auto">
-    <div class="d-flex flex-column align-content-center">
-        <ul class="list-group">
-            <li class="list-group-item"><a href="/aluno/lista/TDS">Técnico em Desenvolvimento de Sistemas</a></li>
-            <li class="list-group-item"><a href="/aluno/lista/TI">Técnico em Informática</a></li>
-            <li class="list-group-item"><a href="/aluno/lista/TADM">Técnico em Administração</a></li>
-            <li class="list-group-item"><a href="/aluno/lista/TAUT">Técnico em Automação Industrial</a></li>
-            <li class="list-group-item"><a href="/aluno/lista/PROEJA">Técnico em Administração (PROEJA)</a></li>
-            <li class="list-group-item"><a href="/aluno/lista/BADM">Bacharelado em Administração</a></li>
-            <li class="list-group-item"><a href="/aluno/lista/ADS">Tecnologia em Análise e Desenvolvimento de Sistemas</a></li>
-        </ul>
-    </div>
+    <table class="table table-striped">
+        <tr>
+            <td><a href="/aluno/lista/TDS">Técnico em Desenvolvimento de Sistemas</a></td>
+            <td>
+                <a href="/ingresso/todos/TDS">Todos Ingressos</a>
+            </td>
+        </tr>
+        <tr>
+            <td><a href="/aluno/lista/TI">Técnico em Informática</a></td>
+            <td>
+                <a href="/ingresso/todos/TI">Todos Ingressos</a>
+            </td>
+        </tr>
+        <tr>
+            <td><a href="/aluno/lista/TADM">Técnico em Administração</a></td>
+            <td>
+                <a href="/ingresso/todos/TADM">Todos Ingressos</a>
+            </td>
+        </tr>
+        <tr>
+            <td><a href="/aluno/lista/TAUT">Técnico em Automação Industrial</a></td>
+            <td>
+                <a href="/ingresso/todos/TAUT">Todos Ingressos</a>
+            </td>
+        </tr>
+        <tr>
+            <td><a href="/aluno/lista/PROEJA">Técnico em Administração (PROEJA)</a></td>
+            <td>
+                <a href="/ingresso/todos/PROEJA">Todos Ingressos</a>
+            </td>
+        </tr>
+        <tr>
+            <td><a href="/aluno/lista/BADM">Bacharelado em Administração</a></td>
+            <td>
+                <a href="/ingresso/todos/BADM">Todos Ingressos</a>
+            </td>
+        </tr>
+        <tr>
+            <td><a href="/aluno/lista/ADS">Tecnologia em Análise e Desenvolvimento de Sistemas</a></td>
+            <td>
+                <a href="/ingresso/todos/ADS">Todos Ingressos</a>
+            </td>
+        </tr>
+    </table>
 </div>
