--- a/views/layouts/principal.handlebars
+++ b/views/layouts/principal.handlebars
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="/css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="/css/all.css" rel="stylesheet" type="text/css">
-    <title>Labinc</title>
+    <title>IFMA</title>
 </head>
 <body>
     {{>msg}}
