Ingressos para Egressos

--- a/views/admin/index.handlebars
+++ b/views/admin/index.handlebars
@@ -63,5 +63,11 @@
                 <a href="/ingresso/todos/ADS">Todos Ingressos</a>
             </td>
         </tr>
+        <tr>
+            <td><a href="/aluno/lista/EGRESSO">EGRESSOS</a></td>
+            <td>
+                <a href="/ingresso/todos/EGRESSO">Todos Ingressos</a>
+            </td>
+        </tr>
     </table>
 </div>
