--- a/views/principal/index.handlebars
+++ b/views/principal/index.handlebars
@@ -94,14 +94,21 @@
 <section class="hero-section">
     <div class="container">
 <!--        <h1 class="display-3 fw-bold mb-4">Arraial do IFMA Campus Coelho Neto</h1>-->
+        <div class="d-flex justify-content-center mb-3">
+            <a href="/aluno/confirmar" class="btn btn-light btn-lg px-5 py-3 fw-bold">
+                Confirmar Presença
+            </a>
+        </div>
         <div>
             <img src="/img/arraial.png" alt="" class="w-50">
         </div>
         <p class="lead mb-4">Venha participar do arraial da nossa escola!</p>
                 
-        <a href="/aluno/confirmar" class="btn btn-light btn-lg px-5 py-3 fw-bold">
-            Confirmar Presença
-        </a>
+        <div class="d-flex justify-content-center mt-3">
+            <a href="/aluno/egresso" class="btn btn-primary btn-lg px-5 py-3 fw-bold">
+                Ingresso para Egresso
+            </a>
+        </div>
         <br><br>
 
 
