--- a/views/layouts/principal.handlebars
+++ b/views/layouts/principal.handlebars
@@ -13,5 +13,7 @@
     {{>msg}}
     {{{body}}}
     <script src="/js/bootstrap.bundle.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.15/jquery.mask.js"></script>
 </body>
 </html>
