--- a/views/principal/index.handlebars
+++ b/views/principal/index.handlebars
@@ -105,6 +105,13 @@
                 Confirmar Presença
             </a>
         </div>
+
+
+        <div class="d-flex justify-content-center mt-3">
+            <a href="/ingresso/retirar" class="btn btn-danger btn-lg px-5 py-3 fw-bold">
+                Retirar Ingressos
+            </a>
+        </div>
         <br><br>
 
 
