--- a/views/principal/index.handlebars
+++ b/views/principal/index.handlebars
@@ -101,7 +101,7 @@
         <p class="lead mb-4">Venha participar do arraial da nossa escola!</p>
                 
         <div class="d-flex justify-content-center mt-3">
-            <a href="/aluno/confirmar" class="btn btn-light btn-lg px-5 py-3 fw-bold">
+            <a href="#" onclick="acabou()" class="btn btn-secondary btn-lg px-5 py-3 fw-bold" disabled="true">
                 Confirmar Presença
             </a>
         </div>
@@ -269,10 +269,10 @@
 <section class="py-5 bg-success text-white">
     <div class="container text-center">
 
-        <p class="lead mb-4">Confirme sua presença e de seus convidados!</p>
-        <a href="/aluno/confirmar" class="btn btn-light btn-lg px-5 py-3 fw-bold">
-            Confirmar Presença
-        </a>
+<!--        <p class="lead mb-4">Confirme sua presença e de seus convidados!</p>-->
+<!--        <a href="/aluno/confirmar" class="btn btn-light btn-lg px-5 py-3 fw-bold">-->
+<!--            Confirmar Presença-->
+<!--        </a>-->
     </div>
 </section>
 
@@ -379,6 +379,11 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script>
+
+    function acabou(){
+        alert('Confirmações de ingressos encerradas')
+    }
+
     document.getElementById('botao_acesso').addEventListener('click', async function(){
         const matricula = document.getElementById('matricula2').value.trim()
         if(!matricula) {
